--- a/src/main/resources/templates/hallRow.html
+++ b/src/main/resources/templates/hallRow.html
@@ -31,9 +31,9 @@
     <h5>Выберите ряд: </h5>
 </head>
 <body>
-<form>
+<form th:action="@{/choiceRow}" method="POST">
     <div>
-        <input type="radio" id="1"
+        <input type="radio" id="1" checked
                name="0" value="1">
         <label for="1">1</label>
 
@@ -73,9 +73,7 @@
                name="0" value="10">
         <label for="10">10</label>
     </div>
-    <a class="nav-item nav-link" th:href="@{/hallSeat}">
         <button type="submit" class="btn btn-primary">Далее</button>
-    </a>
 </form>
 </body>
 </html>
