--- a/src/main/resources/templates/addSession.html
+++ b/src/main/resources/templates/addSession.html
@@ -22,16 +22,9 @@
     <h1 align="center">Киноман</h1>
 </font>
 <div class="container">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-item nav-link" href="/sessions">Главная</a>
-            </div>
-        </div>
-    </nav>
+    <a class="nav-item nav-link" href="/sessions">
+        <button type="submit" class="btn btn-primary">Главная</button>
+    </a>
     <div class="row pt-3">
         <div class="card" style="width: 100%">
             <div class="card-header">
