--- a/src/main/resources/templates/hallSeat.html
+++ b/src/main/resources/templates/hallSeat.html
@@ -17,6 +17,26 @@
     <font size="6" color="blue" face="Comic Sans MS">
         <h1 align="center">Киноман</h1>
     </font>
+    <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-item nav-link" th:if="${user.username == 'Гость'}" th:href="@{/loginPage}">
+                        <span th:text="${user.username}"></span>
+                        <span> | Войти</span>
+                    </a>
+                    <a class="nav-item nav-link" th:if="${user.username != 'Гость'}" th:href="@{/logout}">
+                        <span th:text="${user.username}"></span>
+                        <span> | Выйти</span>
+                    </a>
+                    <a class="nav-item nav-link" th:href="@{/registrationPage}">Регистрация</a>
+                </div>
+            </div>
+        </nav>
+    </div>
     <br>
     <br>
     <font size="6">
