--- a/src/main/resources/templates/info.html
+++ b/src/main/resources/templates/info.html
@@ -17,11 +17,29 @@
     <font size="6" color="blue" face="Comic Sans MS">
         <h1 align="center">Киноман</h1>
     </font>
-    <br>
-    <br>
-    <font size="6">
-        <td th:text="${ses.name}"></td>
-    </font>
+    <div class="container">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-item nav-link" th:if="${user.username == 'Гость'}" th:href="@{/loginPage}">
+                            <span th:text="${user.username}"></span>
+                            <span> | Войти</span>
+                        </a>
+                        <a class="nav-item nav-link" th:if="${user.username != 'Гость'}" th:href="@{/logout}">
+                            <span th:text="${user.username}"></span>
+                            <span> | Выйти</span>
+                        </a>
+                        <a class="nav-item nav-link" th:href="@{/registrationPage}">Регистрация</a>
+                    </div>
+                </div>
+            </nav>
+        </div>
+        <font size="6">
+            <td th:text="${ses.name}"></td>
+        </font>
     <br>
     <span>
         <img th:width="200" th:high="200" th:src="@{|/photoSession/${ses.id}|}">
@@ -31,23 +49,14 @@
 </head>
 <body>
 <h4>Ряд:</h4>
-<h3><td th:text="${row}"></td><br></h3>
+<h3><td th:text="${row}"></td></h3>
 <h4>Место:</h4>
 <h3><td th:text="${seat}"></td></h3>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
             <a class="nav-item nav-link" th:href="@{/result}">
             <button type="submit" class="btn btn-primary">Купить</button>
             </a>
             <a class="nav-item nav-link" th:href="@{/sessions}">
             <button type="submit" class="btn btn-primary">Отменить</button>
             </a>
-        </div>
-    </div>
-</nav>
 </body>
 </html>
